src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Import_Id__c</fullName>
        <description>Import Id</description>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Increased_probability_of_premature_death__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has an irreversible but non-progressive condition with severe disability and is experiencing multiple health complications that increase the probability for premature death.</description>
        <inlineHelpText>Wish Child has an irreversible but non-progressive condition with severe disability and is experiencing multiple health complications that increase the probability for premature death. (e.g., anoxic brain injury, severe cerebral palsy)</inlineHelpText>
        <label>Increased Probability Of Premature Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <description>It holds the Date of Inquriy form submitted.</description>
        <inlineHelpText>Date the Initial lead from a non-authorized referral source is received.</inlineHelpText>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Chapter_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will check, chapter is active chapter or not.</description>
        <label>Hidden Is Chapter Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_We_Need_To_Expedite_The_Process__c</fullName>
        <description>It will hold detail about is there is any medical reason for expedite the process</description>
        <label>Is We Need To Expedite The Process?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_in_a_Comatose_Vegetative_State__c</fullName>
        <description>It will hold whether the child is comatose or vegetative state? or not</description>
        <label>Is In A Comatose/Vegetative State?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <formula>PD_ICD_Code__r.Long_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Long Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lung_Disease__c</fullName>
        <description>It Hold the Lung Disease Details.</description>
        <label>Hidden Lung Disease</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MAW_Name__c</fullName>
        <description>It holds the MAW Name of ICD Code.</description>
        <label>MAW Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_ContactId__c</fullName>
        <description>It is an hidden field. Storing the original Medical Professional Contact Id. So while converting the lead, we can create a relationship under this Record instead of creating dup medical professional contact. we are capturing value for this field on Find Duplicate page.</description>
        <label>Hidden Medical Professional ContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Email__c</fullName>
        <description>This field will hold the details about the Medical Professional Email</description>
        <label>Medical Professional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_First_Name__c</fullName>
        <description>This field will hold the details of Medical Professional First Name</description>
        <label>Medical Professional First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Last_Name__c</fullName>
        <description>It will display the details of the Medical Professional Last Name.</description>
        <label>Medical Professional Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Phone__c</fullName>
        <description>This field will hold the Medical Professional Phone details</description>
        <label>Medical Professional Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Suffix__c</fullName>
        <description>This field will hold the details of the Medical Professional Suffix</description>
        <label>Medical Professional Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Title__c</fullName>
        <description>This field will hold the Medical Professional Title</description>
        <label>Medical Professional Title</label>
        <picklist>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Titles__c</fullName>
        <description>This field will hold the details of the Medical Professional Title</description>
        <label>Medical Professional Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Provider_Category__c</fullName>
        <description>It will hold the value of Medical Provider Category.</description>
        <label>Medical Provider Category</label>
        <picklist>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Life Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Questions__c</fullName>
        <description>Holds all medical Questions</description>
        <label>Medical Questions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>This field is used to store middle name</description>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Verbal__c</fullName>
        <description>This field is indicate the communication is Non-Verbal or Not.</description>
        <formula>IF(INCLUDES(Communication__c, &apos;Non-Verbal&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non - Verbal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>None_of_these_statements_describes_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <description>None of these statements describe Wish Child</description>
        <inlineHelpText>None of these statements describe Wish Child</inlineHelpText>
        <label>None Of These Statements Describes Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Of_Times_Email_Sent__c</fullName>
        <description>It hold the Number of time email is sent.</description>
        <label># Of Times Email Sent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Referral_Email__c</fullName>
        <description>This Field is store the Office Referral email Address.</description>
        <label>Office Referral Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Medical_Provider_Category__c</fullName>
        <description>It holds the Other Medical Provider Category values</description>
        <label>Other Medical Provider Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Relationship_To_Child__c</fullName>
        <description>It will hold the value of Other Relationship to child.</description>
        <label>Other Relationship To Child</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Dupe_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to bypass the duplicate validation.</description>
        <label>Hidden No Duplicate Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCD_ICD__c</fullName>
        <description>Used to hold the input value entered by user is ICD Code or Condition Description</description>
        <label>Hidden PCD-ICD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_Condition_Description__c</fullName>
        <description>This filed is used to store the condition description from PartA from.</description>
        <label>Primary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_ICD_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_First_Name__c</fullName>
        <description>It hold the First name of wish&apos;s parent.</description>
        <label>Parent First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Name__c</fullName>
        <description>This field will hold the Parent name / Guardian name of the Wish kid</description>
        <label>Parent/Guardian Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Last_Name__c</fullName>
        <description>It hold the last name of Wish&apos;s parent.</description>
        <label>Parent Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Relationship_to_Child__c</fullName>
        <label>Parent Relationship to Child</label>
        <picklist>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandmother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandfather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepmother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepfather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepsister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepbrother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coworker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandaughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Part_A_Form_Password__c</fullName>
        <description>It hold the Diagnosis Verification Password.</description>
        <label>Diagnosis Verification Form Password</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_A_Received__c</fullName>
        <description>This field will capture the date when the status is changed Part A Sent to Eligibility Review/Qualified</description>
        <inlineHelpText>Date the Diagnosis Verification is received from the child&apos;s medical professional.</inlineHelpText>
        <label>Diagnosis Verification Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part_A_Sent__c</fullName>
        <description>This will capture the date when the lead status is changed from Referred to Part A Sent</description>
        <inlineHelpText>Date the Diagnosis Verification is sent to the child&apos;s medical professional</inlineHelpText>
        <label>Diagnosis Verification Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Please_Explain_Deteriorate__c</fullName>
        <description>It holds the explanation for question(Do you expect this child&apos;s condition will significantly deteriorate in the next 3-6 months?)</description>
        <label>Please Explain Condition Deteriorate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_Explain__c</fullName>
        <description>Explanation for the wish</description>
        <label>Please Explain Expedite</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>This Field is Store the preferred Name</description>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provided_additional_information__c</fullName>
        <description>Used to get additional information provided by Medical Professional</description>
        <label>Provided additional information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Signature__c</fullName>
        <description>It will hold the provider signature</description>
        <label>Provider Signature</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pulmonary_Hypertension__c</fullName>
        <description>It hold the value of Travel Algorithm additional questions.</description>
        <label>Hidden Pulmonary Hypertension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Any_medical_reason_for_moving_quickly__c</fullName>
        <description>RUSH</description>
        <label>RE Any medical reason for moving quickly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_City__c</fullName>
        <description>CITY</description>
        <label>RE City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Communication__c</fullName>
        <description>PRIMARY_LANGUAGE</description>
        <label>RE Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Country__c</fullName>
        <description>COUNTRY</description>
        <label>RE Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Created_Date__c</fullName>
        <description>DATE_ADDED</description>
        <label>RE Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_DOB__c</fullName>
        <description>BIRTH_DATE</description>
        <label>RE DOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Diagnosis_Verification_Received__c</fullName>
        <description>QUALIFIED</description>
        <label>RE Diagnosis Verification Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Email_Opt_Out__c</fullName>
        <description>INACTIVE, DO_NOT_CALL
|NO_EMAIL</description>
        <label>RE Email Opt Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Email__c</fullName>
        <description>NUM</description>
        <label>RE Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Family_s_primary_spoken_language__c</fullName>
        <description>PRIMARY_LANGUAGE</description>
        <label>RE Family&apos;s primary spoken language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Fax__c</fullName>
        <description>NUM</description>
        <label>RE Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_First_Name__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Gender__c</fullName>
        <description>SEX</description>
        <label>RE Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Hospital_Treatment_Facility__c</fullName>
        <description>ORG_NAME</description>
        <label>RE Hospital/Treatment Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_ICD_10_Code__c</fullName>
        <description>ICD_CODE</description>
        <label>RE ICD-10 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>CONSTITUENT_ID, MAWWISHDATAID, IMPORTID</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Is_We_Need_To_Expedite_The_Process__c</fullName>
        <description>RUSH</description>
        <label>RE Is We Need To Expedite The Process?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Last_Name__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Long_Description__c</fullName>
        <description>ICD_CODE_DESCRIPTION</description>
        <label>RE Long Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_MAW_Name__c</fullName>
        <description>ILLNESS_CATEGORY</description>
        <label>RE MAW Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Professional_Email__c</fullName>
        <description>NUM</description>
        <label>RE Medical Professional Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Professional_First_Name__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE Medical Professional First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Professional_Last_Name__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Medical Professional Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Professional_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Medical Professional Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Professional_Suffix__c</fullName>
        <description>SUFFIX_1</description>
        <label>RE Medical Professional Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Professional_Title__c</fullName>
        <description>TITLE_1</description>
        <label>RE Medical Professional Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Provider_Category__c</fullName>
        <description>RECIP_RELATION_CODE</description>
        <label>RE Medical Provider Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Middle_Name__c</fullName>
        <description>MIDDLE_NAME</description>
        <label>RE Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mobile_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Mobile Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Non_Verbal__c</fullName>
        <description>PRIMARY_LANGUAGE</description>
        <label>RE Non - Verbal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Relationship_To_Child__c</fullName>
        <description>WISH_REFERRAL_CAT</description>
        <label>RE Other Relationship To Child</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_PD_Condition_Description__c</fullName>
        <description>ICD_CODE_DESCRIPTION</description>
        <label>RE PD Condition Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_PD_ICD_Code__c</fullName>
        <description>ICD_CODE</description>
        <label>RE PD ICD Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Parent_First_Name__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE Parent First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Parent_Last_Name__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Parent Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Preferred_Name__c</fullName>
        <description>NICKNAME</description>
        <label>RE Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_PrimaryDiagnosis_ConditionDescription__c</fullName>
        <description>ICD_CODE_DESCRIPTION</description>
        <label>RE PrimaryDiagnosis ConditionDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Primary_Diagnosis__c</fullName>
        <description>ICD_CODE</description>
        <label>RE Primary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Qualifying_Medical_Professional_Email__c</fullName>
        <description>NUM</description>
        <label>RE Qualifying Medical Professional Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Qualifying_Medical_Professional_Fax__c</fullName>
        <description>NUM</description>
        <label>RE Qualifying Medical Professional Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Qualifying_Medical_Professional_First__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE Qualifying Medical Professional First</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Qualifying_Medical_Professional_Last__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Qualifying Medical Professional Last</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Qualifying_Medical_Professional_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Qualifying Medical Professional Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referred_Date__c</fullName>
        <description>REFERRAL</description>
        <label>RE Referred Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_City__c</fullName>
        <description>CITY</description>
        <label>RE Referrer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Email__c</fullName>
        <description>NUM</description>
        <label>RE Referrer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_FirstName__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE Referrer FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Last_Name__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Referrer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Referrer Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Zip__c</fullName>
        <description>POST_CODE</description>
        <label>RE Referrer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Relationship_to_child__c</fullName>
        <description>WISH_REFERRAL_CAT</description>
        <label>RE Relationship to child</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_State_Province__c</fullName>
        <description>STATE</description>
        <label>RE State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Status__c</fullName>
        <description>STATUS</description>
        <label>RE Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Street__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Sub_Status__c</fullName>
        <description>INCOMPLETE_STATUS</description>
        <label>RE Sub Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_What_is_the_family_s_primary_spoken__c</fullName>
        <description>PRIMARY_LANGUAGE</description>
        <label>RE What is the familyâ€™s primary spoken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Zip_Postal_Code__c</fullName>
        <description>POST_CODE</description>
        <label>RE Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Form_Info_Hidden__c</fullName>
        <description>In hold the RFI form status level. And this field is hidden field for preventing dup criteria while creating new lead from RFI.</description>
        <label>RFI Form Info Hidden</label>
        <picklist>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_Date__c</fullName>
        <description>This field will capture the date value when the lead is  referred</description>
        <inlineHelpText>Date the Initial lead from an authorized referral source is received.</inlineHelpText>
        <label>Referred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referrer_City__c</fullName>
        <description>It will capture city of the wih&apos;s parent.</description>
        <label>Referrer City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <description>It will capture email address of wish parent from referral form.</description>
        <label>Referrer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_FirstName__c</fullName>
        <description>It will hold the firstname of the child.</description>
        <label>Referrer First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Last_Name__c</fullName>
        <description>It will capture the last name of child.</description>
        <label>Referrer Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Phone__c</fullName>
        <description>It will capture the phone number of Referrer</description>
        <label>Referrer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referrer_Zip__c</fullName>
        <description>It will capture the zipcode of wish&apos;s parent.</description>
        <label>Referrer Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the region for chapter</description>
        <label>Region Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.ChapterName__c</field>
                <operation>equals</operation>
                <valueField>Regions__c.Chapter_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>Regions__c.Chapter_Name__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Regions__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>